5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1785_1599.log
== TEST (2019-05-30 11:06:21) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		z[i]=com[i]-((15/100)*com[i])
		
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:07:45) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		z[i]=com[i]-((15/100)*com[i])
	i=i+1
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:10) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		z[i]=com[i]-((15/100)*com[i])
	i=i+1
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:10:30) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		z[i]=com[i]-((15/100)*com[i])
	i=i+1
print(round(sum(z),2)
		
-- ERROR:
File "XXXX", line 14
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:10:56) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		z[i]=com[i]-((15/100)*com[i])
	i=i+1
print(sum(z))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:23) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		z[i]=com[i]-((15/100)*com[i])
	i=i+1
print(sum(z))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:12) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		z[i]=com[i]-(((15*com[i])/100))
	i=i+1
print(sum(z))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:11) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
print(sum(z))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:25:46) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)
c=zeros(a, dtype=float)
while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1

j=0
b=zeros(size(com),dtype=float)
while(j<size(com)):
	if(com[j]>80):
		b[j]=com[j]
	i=i+1
vetresul=b-com
vetresul2=z+vetresul

print(sum(vetresul2))
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:26:34) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)
c=zeros(a, dtype=float)
while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1

j=0
b=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]>80):
		b[j]=com[j]
	i=i+1
vetresul=b-com
vetresul2=z+vetresul

print(sum(vetresul2))
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:00) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)
c=zeros(a, dtype=float)
while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1

j=0
b=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]>80):
		b[j]=com[j]
	j=j+1
vetresul=b-com
vetresul2=z+vetresul

print(sum(vetresul2))
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:33:02) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)
c=zeros(a, dtype=float)
while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1

j=0
b=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]>80):
		b[j]=com[j]
	i=i+1
vetresul=b-com
vetresul2=z+vetresul

print(sum(vetresul2))
		
		
		
-- EXECUTION TIME:
374.669
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:13) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:31) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1

print(sum(z))		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:55) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
j=0
c=zeros(a,dtype=float)
while(j<sizecom):
	if(com[j]<80):
		c[j]=com[j]
		
vetr=sum(z-c)
	
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:10) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
j=0
c=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]<80):
		c[j]=com[j]
		
vetr=sum(z-c)
	
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:42) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
j=0
c=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]<80):
		c[j]=com[j]
	j=j+1
vetr=sum(z-c)
	
print(vetr)
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:10) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
j=0
c=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]<80):
		c[j]=com[j]
	j=j+1
vetr=z+c
	
print(vetr)
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:27) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
j=0
c=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]<80):
		c[j]=com[j]
	j=j+1
vetr=z+c
	
print(sum(vetr))
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:53) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
j=0
c=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]<80):
		c[j]=com[j]
	j=j+1
vetr=z+c
	
print(round(sum(vetr),2))
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:39:01) 
-- CODE:
from numpy import*

com=array(eval(input("entre com a lista de compras")))
a=size(com)
i=0
z=zeros(a, dtype=float)

while(i<size(com)):
	if(com[i]> 80):
		c= com[i]-((15*com[i])/100)
		z[i]=c
	i=i+1
j=0
c=zeros(a,dtype=float)
while(j<size(com)):
	if(com[j]<80):
		c[j]=com[j]
	j=j+1
vetr=z+c
	
print(round(sum(vetr),2))
	
	
		
		
-- EXECUTION TIME:
0.473904
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
